# william-snekspeare

./: README.md  TODO.md  stack.yaml  william-snekspeare.cabal
app/: Main.hs
madsrc/: slither.mad
src/Tweet/: .Snek.hs.swn  .Snek.hs.swo  .Snek.hs.swp  Snek.hs
