name:                william-snekspeare
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vmchale/william-snekspeare#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           Copyright: (c) 2016 Vanessa McHale
category:            Web
build-type:          Simple
extra-source-files:  README.md, stack.yaml, text/complete-works.txt, madsrc/slither.mad
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tweet.Snek
  build-depends:       base >= 4.9.0.0 && < 5
                     , tweet-hs
                     , text
                     , mwc-random
                     , lens
                     , madlang 
                     , ansi-wl-pprint
                     , optparse-generic
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , DeriveGeneric
                     , DataKinds

executable william-snekspeare
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , william-snekspeare
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/william-snekspeare
